WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169536
[Cocoa] Incorrect availability annotations in WKUserContentController.h
https://bugs.webkit.org/show_bug.cgi?id=169536
Summary
[Cocoa] Incorrect availability annotations in WKUserContentController.h
mitz
Reported
2017-03-12 20:31:07 PDT
<
https://trac.webkit.org/r213696
> introduced new API in WKUserContentController.h with incorrect macOS availability information. Patch forthcoming.
Attachments
Use WK_MAC_TBA for macOS availability
(1.93 KB, patch)
2017-03-12 20:32 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2017-03-12 20:32:46 PDT
Created
attachment 304218
[details]
Use WK_MAC_TBA for macOS availability
WebKit Commit Bot
Comment 2
2017-03-12 22:38:29 PDT
Comment on
attachment 304218
[details]
Use WK_MAC_TBA for macOS availability Clearing flags on attachment: 304218 Committed
r213781
: <
http://trac.webkit.org/changeset/213781
>
WebKit Commit Bot
Comment 3
2017-03-12 22:38:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug