[Cocoa] Incorrect availability annotations in WKUserContentController.h https://bugs.webkit.org/show_bug.cgi?id=169536

Reviewed by Alexey Proskuryakov.

* UIProcess/API/Cocoa/WKUserContentController.h: Use WK_MAC_TBA for macOS availability.


Canonical link: https://commits.webkit.org/186528@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213781 268f45cc-cd09-0410-ab3c-d52691b4dbfc